--- a/vs2008/OSGDefaultProject.vcproj
+++ b/vs2008/OSGDefaultProject.vcproj
@@ -173,7 +173,15 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath="..\src\BasicModel.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\src\main.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\src\ModelManager.cpp"
 				>
 			</File>
 		</Filter>
@@ -182,6 +190,14 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath="..\src\BasicModel.h"
+				>
+			</File>
+			<File
+				RelativePath="..\src\ModelManager.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
