--- a/vs2008/OSGDefaultProject.vcproj
+++ b/vs2008/OSGDefaultProject.vcproj
@@ -181,6 +181,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\src\EnemyController.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\src\GameSim.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\src\main.cpp"
 				>
 			</File>
@@ -200,6 +208,14 @@
 			</File>
 			<File
 				RelativePath="..\src\Enemy.h"
+				>
+			</File>
+			<File
+				RelativePath="..\src\EnemyController.h"
+				>
+			</File>
+			<File
+				RelativePath="..\src\GameSim.h"
 				>
 			</File>
 			<File
