--- a/vs2008/OSGDefaultProject.vcproj
+++ b/vs2008/OSGDefaultProject.vcproj
@@ -185,15 +185,15 @@
 				>
 			</File>
 			<File
-				RelativePath="..\src\GameSim.cpp"
-				>
-			</File>
-			<File
 				RelativePath="..\src\main.cpp"
 				>
 			</File>
 			<File
 				RelativePath="..\src\ModelManager.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\src\WorldSim.cpp"
 				>
 			</File>
 		</Filter>
@@ -215,11 +215,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\src\GameSim.h"
+				RelativePath="..\src\ModelManager.h"
 				>
 			</File>
 			<File
-				RelativePath="..\src\ModelManager.h"
+				RelativePath="..\src\WorldSim.h"
 				>
 			</File>
 		</Filter>
