--- a/vs2008/OSGDefaultProject.vcproj
+++ b/vs2008/OSGDefaultProject.vcproj
@@ -185,11 +185,19 @@
 				>
 			</File>
 			<File
+				RelativePath="..\src\FindNodeVisitor.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\src\main.cpp"
 				>
 			</File>
 			<File
 				RelativePath="..\src\ModelManager.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\src\ShaderHandler.cpp"
 				>
 			</File>
 			<File
@@ -215,7 +223,15 @@
 				>
 			</File>
 			<File
+				RelativePath="..\src\FindNodeVisitor.h"
+				>
+			</File>
+			<File
 				RelativePath="..\src\ModelManager.h"
+				>
+			</File>
+			<File
+				RelativePath="..\src\ShaderHandler.h"
 				>
 			</File>
 			<File
