--- a/vs2008/OSGDefaultProject.vcproj
+++ b/vs2008/OSGDefaultProject.vcproj
@@ -189,11 +189,23 @@
 				>
 			</File>
 			<File
+				RelativePath="..\src\InputHandler.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\src\main.cpp"
 				>
 			</File>
 			<File
 				RelativePath="..\src\ModelManager.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\src\MouseEventHandler.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\src\MyKeyboardEventHandler.cpp"
 				>
 			</File>
 			<File
@@ -227,7 +239,19 @@
 				>
 			</File>
 			<File
+				RelativePath="..\src\InputHandler.h"
+				>
+			</File>
+			<File
 				RelativePath="..\src\ModelManager.h"
+				>
+			</File>
+			<File
+				RelativePath="..\src\MouseEventHandler.h"
+				>
+			</File>
+			<File
+				RelativePath="..\src\MyKeyboardEventHandler.h"
 				>
 			</File>
 			<File
