--- a/vs2005/OSGDefaultProject.vcproj
+++ b/vs2005/OSGDefaultProject.vcproj
@@ -190,11 +190,23 @@
 				>
 			</File>
 			<File
+				RelativePath="..\src\InputHandler.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\src\main.cpp"
 				>
 			</File>
 			<File
 				RelativePath="..\src\ModelManager.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\src\MouseEventHandler.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\src\MyKeyboardEventHandler.cpp"
 				>
 			</File>
 			<File
@@ -228,7 +240,19 @@
 				>
 			</File>
 			<File
+				RelativePath="..\src\InputHandler.h"
+				>
+			</File>
+			<File
 				RelativePath="..\src\ModelManager.h"
+				>
+			</File>
+			<File
+				RelativePath="..\src\MouseEventHandler.h"
+				>
+			</File>
+			<File
+				RelativePath="..\src\MyKeyboardEventHandler.h"
 				>
 			</File>
 			<File
