--- a/vs2008/OSGDefaultProject.vcproj
+++ b/vs2008/OSGDefaultProject.vcproj
@@ -201,11 +201,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\src\MouseEventHandler.cpp"
+				RelativePath="..\src\MyKeyboardEventHandler.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\src\MyKeyboardEventHandler.cpp"
+				RelativePath="..\src\PickerHandler.cpp"
 				>
 			</File>
 			<File
@@ -247,11 +247,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\src\MouseEventHandler.h"
+				RelativePath="..\src\MyKeyboardEventHandler.h"
 				>
 			</File>
 			<File
-				RelativePath="..\src\MyKeyboardEventHandler.h"
+				RelativePath="..\src\PickerHandler.h"
 				>
 			</File>
 			<File
