--- a/vs2008/OSGDefaultProject.vcproj
+++ b/vs2008/OSGDefaultProject.vcproj
@@ -189,6 +189,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\src\HUDHandler.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\src\InputHandler.cpp"
 				>
 			</File>
@@ -236,6 +240,10 @@
 			</File>
 			<File
 				RelativePath="..\src\FindNodeVisitor.h"
+				>
+			</File>
+			<File
+				RelativePath="..\src\HUDHandler.h"
 				>
 			</File>
 			<File
