--- a/vs2005/OSGDefaultProject.vcproj
+++ b/vs2005/OSGDefaultProject.vcproj
@@ -218,6 +218,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\src\SoundHandler.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\src\WorldSim.cpp"
 				>
 			</File>
@@ -265,6 +269,10 @@
 			</File>
 			<File
 				RelativePath="..\src\ShaderHandler.h"
+				>
+			</File>
+			<File
+				RelativePath="..\src\SoundHandler.h"
 				>
 			</File>
 			<File
