--- a/vs2005/OSGDefaultProject.vcproj
+++ b/vs2005/OSGDefaultProject.vcproj
@@ -210,6 +210,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\src\ParticleSystem.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\src\PickerHandler.cpp"
 				>
 			</File>
