--- a/vs2008/OSGDefaultProject.vcproj
+++ b/vs2008/OSGDefaultProject.vcproj
@@ -40,7 +40,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(OSG_INCLUDE_PATH)&quot;"
+				AdditionalIncludeDirectories="$(OSG_INCLUDE_PATH)"
 				PreprocessorDefinitions="WIN32;_WIN32;_DEBUG"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
