haber si te jala?

--- a/vs2005/OSGDefaultProject.vcproj
+++ b/vs2005/OSGDefaultProject.vcproj
@@ -264,6 +264,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\src\ParticleSystem.h"
+				>
+			</File>
+			<File
 				RelativePath="..\src\PickerHandler.h"
 				>
 			</File>
